--- a/supplementary-material/REM-methods.tex
+++ b/supplementary-material/REM-methods.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=1\textwidth]{/home/tim/Dropbox/PhD/Analysis/REM-chapter/imgs/equalRegions.pdf}
+\includegraphics[width=0.6\textwidth]{/home/tim/Dropbox/PhD/Analysis/REM-chapter/imgs/equalRegions.pdf}
 \caption[REM Model numbers]{The independently derived models for the whole of parameter space. Regions whose solution for $p$ are equal are coloured similarly. Models are numbered by their row, column and then numbered within that area. The models for $\alpha = 2\pi$ or $\theta =  2\pi$ are shown by extending these regions outside of their real boundaries.}
 \label{f:equalRegions}
 \end{figure}
@@ -54,14 +54,14 @@
 
 \end{comment}
 
-Figure \ref{f:equalRegions} shows the different regions with the upper right being the gas model as derived above and p141 being the model from \citep{rowcliffe2008estimating}. Parameter space is broadly split into three rows ($\alpha \le \pi, \pi \le \alpha < 2\pi$ and $\alpha = 2\pi$) and four columns $(\theta \le \pi/2,  \pi/2 \le \theta \le \pi,  \pi \le \theta < 2\pi$ and $\theta = 2\pi$.) Rows and columns define cells. The equation for $p$ in each region is denoted by three numbers referring to rows, columns and region within that cell.
+Figure \ref{f:equalRegions} shows the different regions with the upper right being the gas model as derived above and p141 being the model from \citep{rowcliffe2008estimating}. Parameter space is broadly split into three rows ($\alpha \le \pi, \pi \le \alpha < 2\pi$ and $\alpha = 2\pi$) and four columns $(\theta \le \pi/2,  \pi/2 \le \theta \le \pi,  \pi \le \theta < 2\pi$ and $\theta = 2\pi$.) Rows and columns define cells. The equation for $p$ in each region is denoted by three numbers referring to rows, columns and region within that cell (see Fig.~\ref{f:equalRegions}).
 
 
 \section{Gas model} \label{gas}
 
-We assume that animals are in an homogeneous environment, and move in straight lines of random direction with velocity v. We allow that our sensor can detect animals at a distance $r$ and that if an animal moves within this detection region they are detected with a probability of 1, independent of distance from the sensor while animals outside the region are never detected.
+We assume that animals are in an homogeneous environment, and move in straight lines of random direction with velocity $v$. We allow that our sensor can detect animals at a distance $r$ and that if an animal moves within this detection region they are detected with a probability of 1, independent of distance from the sensor while animals outside the region are never detected.
 
-We then consider movement from the reference frame of the animals so that now, all animals are stationary and randomly distributed in space, while the sensor moves with velocity $v$. If we calculate the area covered by the sensor during the study period we can estimate the number of animals it should encounter. We calculate this as the average width of the sensor region $p$ multiplied by $v$. The average width of the profile is the integral of the profile width over a full circle, divided by $2\pi$. As all models are bilaterally symetric, we can integrate over a half circle, and divide by $\pi$.
+We then consider movement from the reference frame of the animals so that now, all animals are stationary and randomly distributed in space, while the sensor moves with velocity $v$. If we calculate the area covered by the sensor during the study period we can estimate the number of animals it should encounter. We calculate this as the average width of the sensor region $p$ multiplied by $v$. The average width of the profile is the integral of the profile width over a full circle, divided by $2\pi$. We use $x_i$ to denote the focal angle which is the angle we integrate over. The subscript $i$ distinguishes different angles (see Figure \ref{f:xis}) but here we use $x_1$.  As all models are bilaterally symetric, we can integrate over a half circle, and divide by $\pi$.
 \begin{align}
 p\text{Gas} =& \frac{1}{\pi}\int\limits_{\frac{\pi}{2}}^{\frac{3\pi}{2}} 2r \; \mathrm{d}x_1\\
 p\text{Gas} =& 2r
@@ -75,44 +75,46 @@ However, in practice we have the opposite situation. We know the number of encou
 	D = z/(2rvt).
 \end{equation}
 For different values of $\theta$ and $\alpha$, the only thing that changes is that the area covered per unit time is no longer given by $2rv$. Instead of the sensor having a diameter of $2r$, the sensor has a complex diameter that changes with approach angle. The rest of the derivation is just calculating this value for all values of $\alpha$ and $\theta$. However, different regions of this two dimensional parameter space have noncontinuously different models, with different derivations. Therefore we have to identify the regions for which the derivation is the same, and then separately derive $p$ for each region.
+
+
 \begin{figure}[t]
         \centering
-        \begin{subfigure}[t]{0.25\textwidth}
+        \begin{subfigure}[t]{0.34\textwidth}
                 \centering
-                \begin{tikzpicture}[scale=0.45]
-                \fullOne{0}{300}{120};
+                \begin{tikzpicture}[scale=0.39]
+                \fullAngleOne{0}{300}{120};
                 \end{tikzpicture}
-                \caption{1st}
+                \caption{$x_1$}
                 \label{f:tikz1}
         \end{subfigure}
         ~ 
-        \begin{subfigure}[t]{0.25\textwidth}
+        \begin{subfigure}[t]{0.22\textwidth}
                 \centering
-                \begin{tikzpicture}[scale=0.45]
-                \fullTwo{0}{60}{70};
+                \begin{tikzpicture}[scale=0.39]
+                \fullAngleTwo{0}{80}{75};
                 \end{tikzpicture}
                 \caption{$x_2$}
                 \label{f:x2}
         \end{subfigure}
         ~ 
-	\begin{subfigure}[t]{0.25\textwidth}
+	\begin{subfigure}[t]{0.22\textwidth}
                 \centering
-                \begin{tikzpicture}[scale=0.45]
-                \fullThree{0}{60}{70};
+                \begin{tikzpicture}[scale=0.39]
+                \fullAngleThree{0}{50}{70};
                 \end{tikzpicture}
                 \caption{$x_3$}
                 \label{f:x3}
         \end{subfigure}%%
 	~
-	\begin{subfigure}[t]{0.25\textwidth}
+	\begin{subfigure}[t]{0.22\textwidth}
                 \centering
-                \begin{tikzpicture}[scale=0.45]
-                \fullFour{0}{60}{50};
+                \begin{tikzpicture}[scale=0.39]
+                \fullAngleFour{0}{80}{70};
                 \end{tikzpicture}
                 \caption{$x_4$}
                 \label{f:x4}
         \end{subfigure}%%
-\caption{The location of the focal angles $x_{i\in[1,4]}$.}
+\caption{The location of the focal angles $x_{i\in[1,4]}$. In these figures, the segment shaped detection region is shown in black. The width of this region is shown with a thick red line and a blue rectangle. The direction of animal movement is always downwards, as indicated by the grey arrow.}
 \label{f:xis}
 \end{figure}
 
@@ -120,37 +122,68 @@ For different values of $\theta$ and $\alpha$, the only thing that changes is th
 
 \section{p311} \label{p311}
 
-p311 is very similar to the gas model except that as $\alpha \le \pi$ the profile width is no longer $2r$ but is instead limited by the width of the animal call. We therefore get a profile width of $2r\sin(\alpha/2)$ instead.
+p311 is very similar to the gas model except that as $\alpha \le \pi$ the profile width is no longer $2r$ but is instead limited by the width of the animal call. We therefore get a profile width of $2r\sin(\alpha/2)$ instead (see Fig~\ref{f:callExplained}).
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p311.tex}
 
 \section{p22} \label{p22}
 
-For regions with profiles that are more complex than a circle we need to explicitly write functions for the width of the profile for every approach angle. We then use these functions to find the average profile for all approach angles by integrating across all $2\pi$ angles of approach and dividing by $2\pi$. In practice, as the models are all left/right symmetrical we can integrate across $\pi$ angles of approach and divide by $\pi$.
+For regions with profiles that are more complex than a circle we need to explicitly write functions for the width of the profile for every approach angle. We then use these functions to find the average profile width for all approach angles by integrating across all $2\pi$ angles of approach and dividing by $2\pi$. 
 
-We use $x_i$ to denote the focal angle which is the angle we integrate over. The subscript $i$ distinguishes different angles. For models in p22 we examine $x_1$ with  $x_1 = \pi/2$ being an approach angle directly towards the sensor (see Figure \ref{f:xis}).
+
 
 There are three regions within cell p22. Note that p221 covers the area $\alpha=2\pi$ as well as the triangle below it as these two models are specified exactly the same, rather than happening to have equal results.
 
-These models have up to five regions. 1) The profile width starts, from $x_1=\frac{\pi}{2}$ as $2r$. 2) At $x_1 = \theta/2$, the right hand side of the profile cannot be $r$ wide as the corner of the blind spot limits its size to being $r\cos(x_1 - \theta/2)$ wide. 
+These models have up to five regions. 1) The profile width starts, from $x_1=\frac{\pi}{2}$ as $2r$. 2) At $x_1 = \theta/2$, the right hand side of the profile cannot be $r$ wide as the corner of the `blind spot' (see Fig.~\ref{f:blindSpot}) limits its size to being $r\cos(x_1 - \theta/2)$ wide (see Fig.~\ref{f:p22Limit}). 
 
-3) The third profile is only found in p223. If $\alpha < 4\pi - 2\theta$, then at $x_1=\theta/2$, when the profile is perpendicular to the edge of the blind spot, the whole right side of the profile is invisible to the sensor. This gives a profile size of just $r$.
+3) The third profile is only found in p223. If $\alpha < 4\pi - 2\theta$, then at $x_1=\theta/2$, when the profile is perpendicular to the edge of the blind spot, the whole right side of the profile is invisible to the sensor (see Fig.~\ref{f:p223third}). This gives a profile size of just $r$.
 
-4) At some point, the sensor can detect animals once they have passed the blind spot giving a profile width of $r + r\cos(x_1 + \theta/2)$. From $x_1=\pi/2$, if the animal call is wide enough to be detected in this area, this is the wider profile. This then defines the split between p221 and p222. In p221, with $\alpha > 3\pi - \theta$, the animal call is wide enough that at $x_1=\pi/2$ the animal can already be detected past the blind spot and so this profile is used. In p222, with $\alpha < 3\pi - \theta$, the latter profile is reached at $5\pi/2 - \theta/2 - \alpha/2$ and is therefore dependant on the sizes of $\alpha$ and $\theta$. 
+4) At some point, the sensor can detect animals once they have passed the blind spot giving a profile width of $r + r\cos(x_1 + \theta/2)$. From $x_1=\pi$, if the animal call is wide enough to be detected in this area, this is the wider profile. This then defines the split between p221 and p222. In p221, with $\alpha > 3\pi - \theta$, the animal call is wide enough that at $x_1=\pi$ the animal can already be detected past the blind spot and so this profile is used. In p222, with $\alpha < 3\pi - \theta$, the latter profile is reached at $5\pi/2 - \theta/2 - \alpha/2$ and is therefore dependant on the sizes of $\alpha$ and $\theta$. 
 
 5) Finally, common to all three models, at $x_1 = 2\pi - \theta/2$ the profile becomes a full $2r$ once again.
 
 
 \subsection{p221} \label{p221}
 
-Model p221 exists within the area bounded by $\alpha\le2\pi$, $\theta\le2\pi$ and $\alpha \ge 3\pi - \theta$. It has four regions; it does not include the $r$ profile at $x_1=\frac{\pi}{2}$. Furthermore, $\theta$ is wide enough that the $r + r\cos(x_1 + \theta/2)$ profile starts at $\pi$. This then gives us
+Model p221 exists within the area bounded by $\alpha\le2\pi$, $\theta\le2\pi$ and $\alpha \ge 3\pi - \theta$. It has four regions; it does not include the $r$ profile at $x_1=\pi$. Furthermore, $\theta$ is wide enough that the $r + r\cos(x_1 + \theta/2)$ profile starts at $\pi$. This then gives us
 
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p221.tex}
 
+
+\begin{figure}[t]
+        \centering
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+        	\sensorOne{220}{120};
+       		\directionArrowOne{0}{220}{120};
+       		\segmentOne{220}{120};
+		\def\angRad{0.6}
+		\draw[profile] (0,0) ++  (180 - 120 + 220/2:\angRad) arc (180 - 120 + 220/2: 360 + 180 - 120 - 220/2  :\angRad);
+                \end{tikzpicture}
+                \caption{Blind spot}
+                \label{f:blindSpot}
+        \end{subfigure}
+~ 
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+                \fullOne{60}{360}{0};
+                \end{tikzpicture}
+                \caption{Directional Call}
+                \label{f:callExplained}
+        \end{subfigure}
+\caption{A) Shows the area referred to as the `blind spot'. B) For directional calls, with $\alpha<\pi$, the width of the profile can be limited by the call angle or by the detector region. Here, p311 is shown. Although the detector region is a full circle, the call angle $\alpha = \pi/3$. The detector width is shown in blue, while the call width is shown as a red rectangle. Only where the two overlap, giving a purple area, can an animal be detected.  }
+\label{f:p22}
+\end{figure}
+
+
+
+
 \subsection{p222} \label{p222}
 
-Model p222 is bounded by $\alpha \le 3\pi - \theta$, $\alpha \ge 4\pi - 2\theta$ and $\alpha \ge \pi$. It is the same as p221 except that the third profile starts at $5\pi/2 - \theta/2 - \alpha/2$ instead of at$\pi$ which is reflected in the different bounds in the second and third integral.
+Model p222 is bounded by $\alpha \le 3\pi - \theta$, $\alpha \ge 4\pi - 2\theta$ and $\alpha \ge \pi$. It is the same as p221 except that the third profile starts at $5\pi/2 - \theta/2 - \alpha/2$ instead of at $\pi$ which is reflected in the different bounds in the second and third integral.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p222.tex}
 
@@ -160,43 +193,127 @@ Model p223 is bound by $\alpha \le 4\pi - 2\theta$, $\alpha \ge \pi$ and $\theta
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p223.tex}
 
+
+
+\begin{figure}[t]
+        \centering
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+                \fullAngleOne{0}{220}{160};
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p22Limit}
+        \end{subfigure}
+        ~ 
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+        	\fill[opacity=\o, sensCol] (0, \lwr) rectangle ({\r}, \upr);       
+        	\directionArrowOne{0}{220}{200};
+		\draw[profile]     (0,0)  -- (0:\r);
+		\fill[ focus]  (180 - 220/2 - 200:\r) ++ (- 220/2 - 220:2*\angRad) arc (- 220/2 - 220:-360-90:2*\angRad) -- (180 - 220/2 - 200:\r) -- cycle;
+        	\segmentOne{220}{200};
+		\draw  (0,0)  ++(180 - 220/2 - 200:\r) -- ++ (-90: 2);
+		\node[left] at (180 - 220/2 - 200:\r) {$\frac{\alpha}{2}$};
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p223third}
+        \end{subfigure}
+        ~ 
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+                \fullOne{0}{220}{240};
+		\fill[ focus]  (180 - 220/2 - 240:\r) ++ (- 220/2 - 220:2*\angRad) arc (- 220/2 - 220:-360-90:2*\angRad) -- (180 - 220/2 - 240:\r) -- cycle;
+        	\segmentOne{220}{240};
+		\node[left] at (180 - 220/2 - 240:\r) {$\frac{\alpha}{2}$};
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p223fourth}
+        \end{subfigure}
+\caption{A) The second integral in p22 with width $r + r\cos(x_1 - \theta/2)$ B) The third integral in p223. The angle shown in red is $\alpha/2$. As it is small, animals to the right of the detector cannot be detected. C) After further rotation, $\alpha/2$ is now bigger than the angle shown and animals to the right of the detector can again be sensed.   }
+\label{f:p22}
+\end{figure}
+
+
 \section{p32} \label{p32}
 
-Cell p32 contains three regions that differ in ways reminiscent of the models in p22. There are four possible profile widths. 1) As $\alpha$ is less than $\pi$ the profile is smaller than $2r$, even when the sensor width is a full diameter. When this is the case, the profile width is instead $2r\sin(\alpha/2$. 2) Similar to p22, at a certain point the blind spot of the sensor area limits the profile width. This gives a profile width of $r\sin(\alpha/2) + r\cos(x_1 - \theta/2)$. 3) Also similar to p22, there can be a point where the right side of the profile is 0 giving a profile width of $r\sin(\alpha/2)$. 4) If $\alpha \le 2\pi - \theta$, then at $\theta/2 + \pi/2 + \alpha/2 $ the profile width become 0. This inequality distinguishes between p322 and p323. 
+Cell p32 contains three regions that differ in ways reminiscent of the models in p22. There are four possible profile widths. 1) As $\alpha$ is less than $\pi$ the profile is smaller than $2r$, even when the sensor width is a full diameter. When this is the case, the profile width is instead $2r\sin(\alpha/2$. 2) Similar to p22, at a certain point the blind spot of the sensor area limits the profile width (see Fig.~\ref{f:p32AT}). This gives a profile width of $r\sin(\alpha/2) + r\cos(x_1 - \theta/2)$. 3) Also similar to p22, there can be a point where the right side of the profile is 0 giving a profile width of $r\sin(\alpha/2)$. 4) If $\alpha \le 2\pi - \theta$, then at $\theta/2 + \pi/2 + \alpha/2 $ the profile width become 0 (see Fig.~\ref{f:p32Last}). This inequality distinguishes between p322 and p323. The profile $r\sin(\alpha/2)$ starts at $\theta/2 + \pi/2$ while at $5\pi/2 - \alpha/2 - \theta/2$ the profile returns to size $2r\sin(\alpha/2)$. If $\theta/2 + \pi/2 \ge 5\pi/2 - \alpha/2 - \theta/2$ we go straight into the  $2r\sin(\alpha/2)$ profile and miss the $r\sin(\alpha/2)$ profile.  p321 and p322 are seperated by this inequality which simplifies to $\alpha \le 4\pi - 2\theta$. 
 
-The profile $r\sin(\alpha/2)$ starts at $\theta/2 + \pi/2$ while at $5\pi/2 - \alpha/2 - \theta/2$ the profile returns to size $2r\sin(\alpha/2)$. If $\theta/2 + \pi/2 \ge 5\pi/2 - \alpha/2 - \theta/2$ we go straight into the  $2r\sin(\alpha/2)$ profile and miss the $r\sin(\alpha/2)$ profile.  p321 and p322 are seperated by this inequatility which simplifies to $\alpha \le 4\pi - 2\theta$. 
+
+
+\begin{figure}[t]
+        \centering
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+                \fullOne{100}{200}{170}
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p32AT}
+        \end{subfigure}
+~ 
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+                \fullOne{0}{220}{330}; % 220/2 + 90 +130
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p32Last}
+        \end{subfigure}
+\caption{A) The third integral in p32. The right side of the profile is limited by the size of the sensor region (blue region) while the left side of the profile is limited by the size of the call angle (red region). The profile width is the purple region where these two overlap. B)     }
+\label{f:p32}
+\end{figure}
 
 \subsection{p321} \label{p321}
 
-p321 is bounded by $\alpha \ge 4\pi - 2\theta$, $\alpha \le \pi$ and $\theta \le 2\pi$. As $\alpha \ge 4\pi - 2\theta$, there is no $r\sin(\alpha/2$ profile. As $\alpha \le 4\pi - 2\theta$, the profile returns to $2r\sin(\alpha/2$ rather than going to 0.
+p321 is bounded by $\alpha \ge 4\pi - 2\theta$, $\alpha \le \pi$ and $\theta \le 2\pi$. As $\alpha \ge 4\pi - 2\theta$, there is no $r\sin(\alpha/2)$ profile. As $\alpha \le 4\pi - 2\theta$, the profile returns to $2r\sin(\alpha/2)$ rather than going to 0.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p321.tex}
 
 \subsection{p322} \label{p322}
 
-p322 is bounded by $4\pi - 2\theta \le \alpha \le 4\pi - 2\theta$ and $\alpha \le \pi$. Therefore there is a $r\sin(\alpha/2$ profile but no $0r$ profile.
+p322 is bounded by $4\pi - 2\theta \le \alpha \le 4\pi - 2\theta$ and $\alpha \le \pi$. Therefore there is a $r\sin(\alpha/2)$ profile but no $0r$ profile.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p322.tex}
 
 \subsection{p323} \label{p323}
 
-Finally p323 is bounded by  $\alpha \le 4\pi - 2\theta $, $\alpha\le\pi$ and $\theta \le \pi$. It is the same as p322 except that the profile becomes $2r$ rather than returning to $2r\sin(\alpha/2$.
+Finally p323 is bounded by  $\alpha \le 4\pi - 2\theta $, $\alpha\le\pi$ and $\theta \le \pi$. It is the same as p322 except that the profile becomes $2r$ rather than returning to $2r\sin(\alpha/2)$.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p323.tex}
 
 
 \begin{figure}[t]
-\centering
-\includegraphics[width=1\textwidth]{/home/tim/Dropbox/PhD/Analysis/REM-chapter/imgs/equalModelResults.pdf}
-\caption[REM model solutions]{The results of the models grouped so that all the regions with equal results are presented only once.}
-\label{f:equalModelResults}
+        \centering
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+                \fullAngleFour{0}{140}{30}
+		
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p131AT}
+        \end{subfigure}
+~ 
+        \begin{subfigure}[t]{0.3\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+                \fullAngleFour{0}{130}{110};
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p131behindFull}
+        \end{subfigure}
+\caption{A) and B) The third and fourth profiles of p131. The left side of of both profiles is of width $r$ while the right side is $- r\cos(x_4 - \theta)$ and $- r\cos(x_4)$ respectively. }
+\label{f:p131}
 \end{figure}
 
 \section{p131} \label{p131}
 
-p131 is the first model with $\theta < \pi$. Whereas previously the focal angle has always been $x_1$, we now use different focal angles. $x_2$ and $x_3$ correspond to $\gamma_1$ and $\gamma_2$ in \cite{rowcliffe2008estimating} while $x_4$ is new. They are described in Figure~\ref{f:xis}. 
+p131 is the first model with $\theta < \pi$. Whereas previously the focal angle has always been $x_1$, we now use different focal angles. $x_2$ and $x_3$ correspond to $\gamma_1$ and $\gamma_2$ in \cite{rowcliffe2008estimating} while $x_4$ is new. They are described in Fig.~\ref{f:xis}. 
 
-There are five different profiles in p131. 1) $x_2$ has an interval of $[\pi/2, \theta/2]$ which is from the angle of approach being directly towards the sensor until the profile is parellel to the left hand radius of the sensor segment. During this region the profile width is $2r\sin\left(\theta/2\right)\sin(x_2)$ which is calculated using the equation for the length of a chord. Note that while rotating anti-clockwise (as usual) $x_2$ decreases in size. 2) From here, we examine focal angle $x_4$ (note that $x_3$ is used in later models, but is not relevant here.)  The left side of the profile is a full radius while the right side is limited to $- r\cos(x_4 - \theta)$. 3) At $x_4 =  \theta - \pi/2$, the profile is perpendicular to the edge of the sensor area. Here, the right side of the profile is $0r$. 4) When $x_4 = \pi/2$ the angle of approach is from behind the sensor, but we can once again be detected on the right side of the sensor. Therefore the width of the profile is $r - r\cos(x_4)$. 5) Finally, we enter the $x_2$ region, but from behind. 
+There are five different profiles in p131. 1) $x_2$ has an interval of $[\pi/2, \theta/2]$ which is from the angle of approach being directly towards the sensor until the profile is parellel to the left hand radius of the sensor segment. During this region the profile width is $2r\sin\left(\theta/2\right)\sin(x_2)$ which is calculated using the equation for the length of a chord (see Fig.~\ref{f:x2}). Note that while rotating anti-clockwise (as usual) $x_2$ decreases in size. 2) From here, we examine focal angle $x_4$ (note that $x_3$ is used in later models, but is not relevant here.)  The left side of the profile is a full radius while the right side is limited to $- r\cos(x_4 - \theta)$ (see Fig.~\ref{f:p131AT}). 3) At $x_4 =  \theta - \pi/2$, the profile is perpendicular to the edge of the sensor area. Here, the right side of the profile is $0r$. 4) When $x_4 = \pi/2$ the angle of approach is from behind the sensor, but we can once again be detected on the right side of the sensor (see Fig.~\ref{f:p131behindFull}). Therefore the width of the profile is $r - r\cos(x_4)$. 5) Finally, we enter the $x_2$ region, but from behind. 
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p131.tex}
 
@@ -204,15 +321,33 @@ There are five different profiles in p131. 1) $x_2$ has an interval of $[\pi/2, 
 
 The models in cell p23 have the five potential profiles in p131 but not all profiles occur in each model, and the angle at which transitions occur are different. Furthermore, there is one extra profile possible. When approaching the sensor from behind, there is a period where the profile is $r$ wide as in p131. At some point the right side of the profile becomes viable again. If this occurs in the $x_4$ region, the profile width becomes  $r - r\cos(x_4)$ as in p131. However, as $\alpha$ is now less than $2\pi$, the right side of the profile might not be viable until we are in the second $x_2$ region. In this case, when we first enter the second $x_2$ region, the profile has a width of $r\cos(x_2 - \theta/2)$. This occurs only if $\alpha \le 3\pi - 2\theta$. This is inequality is found by noting that the right side of the profile become viable at $x_4 = 3\pi/2 - \alpha$ but the $x_2$ region starts at $x_4 = \theta$. The new profile in $x_2$ will only occur if  $ \theta < 3\pi/2 - \alpha/2$ which is rearranged to find the inequality above. This defines the boundary between p231 and p232.
 
-As $\alpha \le 2\pi$ it is possible that when the angle of approach is from directly behind the sensor the animal will now be detected at all. This is the case if $\alpha\le 2\pi-\theta$. This inequality defines the boundary between p232 and p233.
+As $\alpha \le 2\pi$ it is possible that when the angle of approach is from directly behind the sensor the animal will not be detected at all. This is the case if $\alpha/2\le \pi-\theta/2$ as shown in Fig.~\ref{f:p23behind}. This inequality defines the boundary between p232 and p233.
 
+\begin{figure}[t]
+        \centering
+        \begin{subfigure}[t]{0.4\textwidth}
+                \centering
+                \begin{tikzpicture}[scale=0.38]
+		\sensorTwo{120}{270};
+		\directionArrowTwo{0}{120}{270};
+		\fill[ focus]  (180 + 90 - 120/2:\r) ++ (+ 90 - 150/2:2*\angRad) arc (+ 90 - 150/2:-90:2*\angRad) -- (180 + 90 - 120/2:\r) -- cycle;
+		\segmentTwo{120}{270};
+		\node[left] at (180 + 90 - 120/2:\r) {$\frac{\alpha}{2}$};
+                \end{tikzpicture}
+                \caption{}
+                \label{f:p23behind}
+        \end{subfigure}
+
+\caption{A) If $\alpha/2$, shown in green, is less than $\pi - \theta/2$, as is the case here, then the width of the profile when an animal approaches directly from behind is zero. }
+\label{f:p23}
+\end{figure}
 
 
 \subsection{p231} \label{p231}
 
 p231 is bounded by $\alpha \ge 3\pi - 2\theta$, $\alpha \le 2\pi$ and $\theta\le\pi$.
 
-p231 has all five profiles as found in p131. However, the change from the $r$ profile (third integral) to the $r - r\cos(x_4)$ profile (fourth integral) occurs at $x_4 = 3\pi/2 - \alpha/2$ instead of at $x_4 = \pi/2$. 
+p231 has all five profiles as found in p131. However, the change from the $r$ profile (third integral) to the $r - r\cos(x_4)$ profile (fourth integral) occurs at $x_4 = 3\pi/2 - \alpha/2$ instead of at $x_4 = \theta$. 
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p231.tex}
 
@@ -221,7 +356,7 @@ p231 has all five profiles as found in p131. However, the change from the $r$ pr
 
 p232 is bounded by $\alpha \le 3\pi - 2\theta$, $\alpha\ge 2\pi-\theta$ and $\theta\le\pi$.
 
-p232 does not have the fourth integral from p231 as the right side of the profile does not become viable until after the $x_4$ region has ended and the $x_2$ region has begun. Therefore the second $x_4$ integral has an upper limit of $\theta $ and the integral after has a width of $r\cos(x_2 - \theta/2)$ and is integrated with respect to $x_2$. The final integral starts at $x_4 = 3\pi/2 - \alpha$ and has the full width of $2r\sin(x_2)\sin(\theta/2)$.
+p232 does not have the fourth integral from p231 as the right side of the profile does not become viable until after the $x_4$ region has ended and the $x_2$ region has begun. Therefore the second $x_4$ integral has an upper limit of $\theta $ and the integral after has a width of $r\cos(x_2 - \theta/2)$ and is integrated with respect to $x_2$. The final integral starts at $x_4 = 3\pi/2 - \alpha/2 - \theta/2$ and has the full width of $2r\sin(x_2)\sin(\theta/2)$.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p232.tex}
 
@@ -248,7 +383,7 @@ p331 is bounded by $\alpha \ge \theta$, $\alpha \le\pi$ and $\theta \le \pi$.
 
 As $\alpha $ is large the first profile is limited by the size of the sensor region giving it a width of $2r\sin\left(\theta/2\right)\sin(x_2)$. It is the only one of the three p33 models to start in this way. Later on, still with $x_2$ as the focal angle the left side of the profile does become limited by the call width. So at $x_2= \pi/2 - \alpha/2 + \theta/2$ the profile width becomes $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$. 
 
-As we enter the $x_4$ region, the profile remains limited by the call on the left and by the sensor on the right, giving a profile width of  $r\sin (\alpha /2) -r\cos(x_4-\theta) $. Finally, at $x_4 = \theta_4 - \pi/2$ the right side of the profile becomes zero and the profile is width is $r\sin(\alpha /2)$.
+As we enter the $x_4$ region, the profile remains limited by the call on the left and by the sensor on the right, giving a profile width of  $r\sin (\alpha /2) -r\cos(x_4-\theta) $. Finally, at $x_4 = \theta - \pi/2$ the right side of the profile becomes zero and the profile is width is $r\sin(\alpha /2)$.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p331.tex}
 
@@ -272,7 +407,7 @@ p333 is similar to p332 except that the profile does not become limited by senso
 
 \section{p141} \label{p141}
 
-p141 is the model from \citep{rowcliffe2008estimating}. It has $\alpha =2\pi$ and $\theta \le \pi/2$. It has three profile widths, the two of which are repeated, once as the animal approaches from on front of the sensor and once as the animal approaches from behind the sensor.
+p141 is the model from \citep{rowcliffe2008estimating}. It has $\alpha =2\pi$ and $\theta \le \pi/2$. It has three profile widths, two of which are repeated, once as the animal approaches from on front of the sensor and once as the animal approaches from behind the sensor.
 
 Starting with an approach direction of directly towards the sensor, and examining focal angle $x_2$, the profile width is $2r\sin(x_2)\sin(\theta/2)$. When the profile is perpendicular to the radius edge of the segment sensor region, we instead examine $x_3$ where the profile width is $r\sin(x_3)$. At $x_3=\pi/2$ the profile becomes simply $r$ and this continues for $\theta $ radians of $x_4$. Finally the $x_3$ and $x_2$ are repeated with an approach direction from behind the sensor. 
 
@@ -282,7 +417,7 @@ Starting with an approach direction of directly towards the sensor, and examinin
 
 In the models in p24, the sensor has $\theta \le pi/2$ as in p141. As $\alpha \ge \pi/2$ a lot of the profiles are similar to p141. Specifically, the first three profiles are always the same as the first three profiles of p141. This is because when an animal is moving towards the sensor, the $\alpha \ge \pi$ call is no different to a $2\pi$ call. However, when approaching the sensor from behind, things are slightly different. The animal can only be detected by the sensor if it's call is wide enough that it can be detected once it has passed the sensor. 
 
-The second $x_3$ profile is always the same width as in p141. This is because there is no detection region to one side of the sensor so this side is unaffected by call width, while the width of the other side of the profile is unaffected by $\alpha$ as when $\alpha>\pi$ the profile width will never be limited by $\alpha$. When $\alpha \le 2\pi + 2\theta$, the animal becomes undetectable during this profile when  $x_3$ has decreased in size to $\pi - \alpha/2$. This inequality marks the boundary between p243 and p242. 
+The second $x_3$ profile is always the same width as in p141. This is because there is no detection region to one side of the sensor so this side is unaffected by call width, while the width of the other side of the profile is unaffected by $\alpha$ as when $\alpha>\pi$ the profile width will never be limited by $\alpha$. If $\alpha \le 2\pi + 2\theta$, the animal becomes undetectable during this profile when  $x_3$ has decreased in size to $\pi - \alpha/2$. This inequality marks the boundary between p243 and p242. 
 
 As the focal angle moves from $x_3$ to $x_2$  at $x_3=\theta$, we can see that if $\alpha \ge 2\pi + 2\theta$, then the $x_2$ region is reached before the animal become undetectable. When this second $x_2$ region is reached, the profile starts with width $r\cos(x_2 - \theta/2)$ as at the beginning of the $x_2$ profile as only animals approaching to the left of the sensor are detectable. The sensor is directly behind the right side of the profile.
 
@@ -309,7 +444,7 @@ p242 is the same p241 except that as $\alpha \le 2\pi - \theta$, animals that ap
 
 \subsection{p243} \label{p243}
 
-p243 is bounded by $\alpha \ge 2\pi + 2\theta$, \alpha \ge \pi$ and $\theta \ge 0$.
+p243 is bounded by $\alpha \ge 2\pi + 2\theta$, $\alpha \ge \pi$ and $\theta \ge 0$.
 
 It is similar to p242 but doesn't include the last integral as during the $x_3$ profile, at $x_3 = \pi - \alpha/2$ the call width is too small for any animals to be detected, so the profile width goes to zero.
 
@@ -321,42 +456,57 @@ It is similar to p242 but doesn't include the last integral as during the $x_3$ 
 
 \section{p34} \label{p34}
 
+Cell p34 is split into six models rather than three like most of the other cells. As $\alpha < \pi$, animals approaching the sensor from behind can never be detected, so unlike p141, the second $x_2$ and $x_3$ profiles are always zero. The six models are split by three inequalities that relate to the models as follows.
+
+Models with $\alpha \le \pi - 2\theta$  have no $x_4$ profile. This is because at $x_4 = 0$, the call angle is already too small to be detected.
+
+Models with $\alpha \le \theta$ are limited by $\alpha$ in the first, $x_2$ region, rather than being limited by $\theta$. Therefore this first profile is of width $2r\sin(\alpha/2)$ rather than $2r\sin(\theta/2)\sin(x_2)$.
+
+Finally, models with $\alpha \le 2\theta$ have a second profile in $x_2$ where to one side of the sensor $\alpha$ is the limiting factor of profile width, while on the other side $\theta$. This gives a width of $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$. This profile doesn't occur in models with $\alpha \ge 2\theta$.
 
 \subsection{p341} \label{p341}
 
-p341 is bounded by $\alpha \le \theta$, $\alpha \ge \pi - 2\theta$ and $\theta \le \pi/2$
+p341 is bounded by $\alpha \le \theta$, $\alpha \ge \pi - 2\theta$ and $\theta \le \pi/2$. Therefore it does contain a $x_4$ profile, starts with an $\alpha$ limited profile and does contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p341.tex}
 
 \subsection{p342} \label{p342}
 
-p342 is the only model with a tetrahedral bounding region. It is bounded by $\alpha \ge \theta$, $\alpha \ge \pi - 2\theta$, $\alpha \le 2\theta$ and $\theta \le \pi/2$
+p342 is the only model with a tetrahedral bounding region. It is bounded by $\alpha \ge \theta$, $\alpha \ge \pi - 2\theta$, $\alpha \le 2\theta$ and $\theta \le \pi/2$. Therefore it does contain a $x_4$ profile, but starts with a $\theta$ limited profile. It does contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p342.tex}
 
 \subsection{p343} \label{p343}
 
-p343 is bounded by $\alpha \ge \pi - 2\theta$,  $\alpha \ge 2\theta$ and $\alpha \le \pi$
+p343 is bounded by $\alpha \ge \pi - 2\theta$,  $\alpha \ge 2\theta$ and $\alpha \le \pi$. It starts with a $\theta$ limeted profile and has a $x_4$ profile. However, it does not contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p343.tex}
 
 
 \subsection{p344} \label{p344}
 
-p344 is bounded by $\alpha \le \pi - 2\theta$, $\alpha \le \theta$ and $\alpha < 0$. 
+p344 is bounded by $\alpha \le \pi - 2\theta$, $\alpha \le \theta$ and $\alpha < 0$. Therefore it does not contain a $x_4$ profile. It starts with an $\alpha$ limited profile and contains the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$.
+
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p344.tex}
 
 \subsection{p345} \label{p345}
 
-p345 is bounded by $\alpha \le \pi - 2\theta$, $\alpha \ge \theta$ and $alpha \le 2\theta$.
+p345 is bounded by $\alpha \le \pi - 2\theta$, $\alpha \ge \theta$ and $alpha \le 2\theta$. It starts with a $\theta$ limited profile. It does contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$ but does not have a $x_4$ profile.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p345.tex}
+
+\begin{figure}[t]
+\centering
+\includegraphics[width=1\textwidth]{/home/tim/Dropbox/PhD/Analysis/REM-chapter/imgs/equalModelResults.pdf}
+\caption[REM model solutions]{The results of the models grouped so that all the regions with equal results are presented only once.}
+\label{f:equalModelResults}
+\end{figure}
 
 
 \subsection{p346} \label{p346}
 
-Finally, p346, the last model, is bounded by y $\alpha \le \pi - 2\theta$, $alpha \ge 2\theta$ and $\theta \ge 0$.
+Finally, p346, the last model, is bounded by y $\alpha \le \pi - 2\theta$, $alpha \ge 2\theta$ and $\theta \ge 0$. Therefore it starts with a $\theta$ limited profile. However it doesn't contain the extra $x_2$ profile nor a $x_4$ profile.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p346.tex}
 
